2004-07-24 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Merged patches from OpenBSD port.

2004-07-23 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added new processors: 12f508 12f509 12f635 12f683 16f505 16f636
    16f785 16f913 16f914 16f916 16f917 18f2410 18f2420 18f2455 18f2480
    18f2510 18f2515 18f2520 18f2525 18f2550 18f2580 18f2585 18f2610 18f2680
    18f2681 18f4410 18f4420 18f4455 18f4480 18f4510 18f4515 18f4520 18f4525
    18f4550 18f4580 18f4585 18f4610 18f4680 18f4681 18f6410 18f6490 18f8410
    18f8490
  * Updated header files and linker scripts.

2004-07-22 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Define SFRs in pub files as uint8 instead of constant uint8.

2004-07-18 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Allow multiple modules and publics in one gpal file.

2004-07-17 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added _stack_end symbol to gplink to simplify downward growing stacks.

2004-07-13 Craig Franklin <craigfranklin@users.sourceforge.net>
  * gputils 0.12.2 Released.

2004-07-08 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Allow empty modules and publics in gpal.
  * Allow if statements in a module or public, but outside of subprograms
    in gpal.

2004-07-07 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added support for manually assigned data memory addresses in gpal.

2004-07-04 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added support for nested case statements in gpal.
  * Added support for multiple switch elements in gpal case statements.

2004-07-03 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added symbol alias feature to gpal.

2004-06-27 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Added several new gpal optimizations.

2004-06-25 Craig Franklin <craigfranklin@users.sourceforge.net>
  * Fixed gpasm regression.  Duplicate extern feature can cause assertions.
  * Allow cblocks in gpasm macros.
