@@ -28,13 +28,13 @@
 
 \layout Title
 \added_space_top vfill \added_space_bottom vfill 
-gputils 0.12.2
+gputils 0.12.3
 \layout Author
 
 James Bowman and Craig Franklin 
 \layout Date
 
-July 13, 2004
+July 25, 2004
 \layout Standard
 
 
@@ -182,112 +182,139 @@ Supported processors
 gputils currently supports the following processors:
 \layout LyX-Code
 
-eeprom8    gen        p12c508    p12c508a   p12c509    p12c509a
+eeprom8    gen        p12c508    p12c508a   p12c509    p12c509a   
 \layout LyX-Code
 
-p12c671    p12c672    p12ce518   p12ce519   p12ce673   p12ce674
+p12c671    p12c672    p12ce518   p12ce519   p12ce673   p12ce674   
 \layout LyX-Code
 
-p12cr509a  p12f629    p12f675    p14000     p16c5x     p16cxx
+p12cr509a  p12f508    p12f509    p12f629    p12f635    p12f675    
 \layout LyX-Code
 
-p16c432    p16c433    p16c505    p16c52     p16c54     p16c54a
+p12f683    p14000     p16c5x     p16cxx     p16c432    p16c433    
 \layout LyX-Code
 
-p16c54b    p16c54c    p16c55     p16c55a    p16c554    p16c557
+p16c505    p16c52     p16c54     p16c54a    p16c54b    p16c54c    
 \layout LyX-Code
 
-p16c558    p16c56     p16c56a    p16c57     p16c57c    p16c58a
+p16c55     p16c55a    p16c554    p16c557    p16c558    p16c56     
 \layout LyX-Code
 
-p16c58b    p16c61     p16c62     p16c62a    p16c62b    p16c620
+p16c56a    p16c57     p16c57c    p16c58a    p16c58b    p16c61     
 \layout LyX-Code
 
-p16c620a   p16c621    p16c621a   p16c622    p16c622a   p16c63
+p16c62     p16c62a    p16c62b    p16c620    p16c620a   p16c621    
 \layout LyX-Code
 
-p16c63a    p16c64     p16c64a    p16c642    p16c65     p16c65a
+p16c621a   p16c622    p16c622a   p16c63     p16c63a    p16c64     
 \layout LyX-Code
 
-p16c65b    p16c66     p16c662    p16c67     p16c71     p16c710
+p16c64a    p16c642    p16c65     p16c65a    p16c65b    p16c66     
 \layout LyX-Code
 
-p16c711    p16c712    p16c715    p16c716    p16c717    p16c72
+p16c662    p16c67     p16c71     p16c710    p16c711    p16c712    
 \layout LyX-Code
 
-p16c72a    p16c73     p16c73a    p16c73b    p16c74     p16c745
+p16c715    p16c716    p16c717    p16c72     p16c72a    p16c73     
 \layout LyX-Code
 
-p16c747    p16c74a    p16c74b    p16c76     p16c765    p16c77
+p16c73a    p16c73b    p16c74     p16c745    p16c747    p16c74a    
 \layout LyX-Code
 
-p16c770    p16c771    p16c773    p16c774    p16c781    p16c782
+p16c74b    p16c76     p16c765    p16c77     p16c770    p16c771    
 \layout LyX-Code
 
-p16c84     p16c923    p16c924    p16c925    p16c926    p16ce623
+p16c773    p16c774    p16c781    p16c782    p16c84     p16c923    
 \layout LyX-Code
 
-p16ce624   p16ce625   p16cr54    p16cr54a   p16cr54b   p16cr54c
+p16c924    p16c925    p16c926    p16ce623   p16ce624   p16ce625   
 \layout LyX-Code
 
-p16cr56a   p16cr57a   p16cr57b   p16cr57c   p16cr58a   p16cr58b
+p16cr54    p16cr54a   p16cr54b   p16cr54c   p16cr56a   p16cr57a   
 \layout LyX-Code
 
-p16cr62    p16cr620a  p16cr63    p16cr64    p16cr65    p16cr72
+p16cr57b   p16cr57c   p16cr58a   p16cr58b   p16cr62    p16cr620a  
 \layout LyX-Code
 
-p16cr83    p16cr84    p16f627    p16f627a   p16f628    p16f628a
+p16cr63    p16cr64    p16cr65    p16cr72    p16cr83    p16cr84    
 \layout LyX-Code
 
-p16f630    p16f648a   p16f676    p16f684    p16f716    p16f72
+p16f505    p16f54     p16f57     p16f627    p16f627a   p16f628    
 \layout LyX-Code
 
-p16f73     p16f737    p16f74     p16f76     p16f767    p16f77
+p16f628a   p16f630    p16f636    p16f648a   p16f676    p16f684    
 \layout LyX-Code
 
-p16f777    p16f818    p16f819    p16f83     p16f84     p16f84a
+p16f688    p16f716    p16f72     p16f73     p16f737    p16f74     
 \layout LyX-Code
 
-p16f87     p16f870    p16f871    p16f872    p16f873    p16f873a
+p16f76     p16f767    p16f77     p16f777    p16f785    p16f818    
 \layout LyX-Code
 
-p16f874    p16f874a   p16f876    p16f876a   p16f877    p16f877a
+p16f819    p16f83     p16f84     p16f84a    p16f87     p16f870    
 \layout LyX-Code
 
-p16f88     p16hv540   p17cxx     p17c42     p17c42a    p17c43
+p16f871    p16f872    p16f873    p16f873a   p16f874    p16f874a   
 \layout LyX-Code
 
-p17c44     p17c752    p17c756    p17c756a   p17c762    p17c766
+p16f876    p16f876a   p16f877    p16f877a   p16f88     p16f913    
 \layout LyX-Code
 
-p17cr42    p17cr43    p18cxx     p18c242    p18c252    p18c442
+p16f914    p16f916    p16f917    p16hv540   p17cxx     p17c42     
 \layout LyX-Code
 
-p18c452    p18c601    p18c658    p18c801    p18c858    p18f1220
+p17c42a    p17c43     p17c44     p17c752    p17c756    p17c756a   
 \layout LyX-Code
 
-p18f1320   p18f2220   p18f2320   p18f2331   p18f242    p18f2431
+p17c762    p17c766    p17cr42    p17cr43    p18cxx     p18c242    
 \layout LyX-Code
 
-p18f2439   p18f248    p18f252    p18f2539   p18f258    p18f2620
+p18c252    p18c442    p18c452    p18c601    p18c658    p18c801    
 \layout LyX-Code
 
-p18f4220   p18f4320   p18f4331   p18f442    p18f4431   p18f4439
+p18c858    p18f1220   p18f1320   p18f2220   p18f2320   p18f2331   
 \layout LyX-Code
 
-p18f448    p18f452    p18f4539   p18f458    p18f4620   p18f6520
+p18f2410   p18f242    p18f2420   p18f2431   p18f2439   p18f2455   
 \layout LyX-Code
 
-p18f6525   p18f6585   p18f6620   p18f6621   p18f6680   p18f6720
+p18f248    p18f2480   p18f2510   p18f2515   p18f252    p18f2520   
 \layout LyX-Code
 
-p18f8520   p18f8525   p18f8585   p18f8620   p18f8621   p18f8680
+p18f2525   p18f2539   p18f2550   p18f258    p18f2580   p18f2585   
 \layout LyX-Code
 
-p18f8720   rf509af    rf509ag    rf675f     rf675h     rf675k
+p18f2610   p18f2620   p18f2680   p18f2681   p18f4220   p18f4320   
 \layout LyX-Code
 
-sx18       sx20       sx28           
+p18f4331   p18f4410   p18f442    p18f4420   p18f4431   p18f4439   
+\layout LyX-Code
+
+p18f4455   p18f448    p18f4480   p18f4510   p18f4515   p18f452    
+\layout LyX-Code
+
+p18f4520   p18f4525   p18f4539   p18f4550   p18f458    p18f4580   
+\layout LyX-Code
+
+p18f4585   p18f4610   p18f4620   p18f4680   p18f4681   p18f6410   
+\layout LyX-Code
+
+p18f6490   p18f6520   p18f6525   p18f6585   p18f6620   p18f6621   
+\layout LyX-Code
+
+p18f6680   p18f6720   p18f8410   p18f8490   p18f8520   p18f8525   
+\layout LyX-Code
+
+p18f8585   p18f8620   p18f8621   p18f8680   p18f8720   rf509af    
+\layout LyX-Code
+
+rf509ag    rf675f     rf675h     rf675k     sx18       sx20       
+\layout LyX-Code
+
+sx28       
+\layout LyX-Code
+
+         
 \layout Chapter
 
 gpal
